2011-03-22  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Avoid Unicode hyphens in generated ASCII document files.

	* Makefile.in (NROFF): New macro; define it to invoke `nroff -Tascii'.
	(%.dist, readme.txt): Use it to ensure that output is pure ASCII.

2011-03-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	mingw-get-0.2-mingw32-alpha-2 released.

	* configure.ac (AC_INIT): Adjust version number.
	* srcdist-doc/NEWS.in: Updated; add bug-fix description.
	* All files (r0-2-alpha-2): Tag assigned.

2011-03-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix MinGW-Bug 3212246.

	* src/keyword.c (has_keyword): Avoid incrementing the comparison
	pointers when a significant character in one string is not matched in
	the other; previously the pointers were left pointing one character to
	the right of the mismatch, and this was overlooked if the mismatch
	occurred at the rightmost character in both strings.

2011-03-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	mingw-get-0.2-mingw32-alpha-1 released.

	* configure.ac (AC_INIT): Set version number; correct capitalisation
	in URI reference to bug reporting instructions.

	* srcdist-doc/NEWS.in: Confirm release date.
	[bug reporting]: Remove redundant paragraph; the information is
	provided, via reference to mingw.org. in the README and INSTALL files.

	* All files (r0-2-alpha-1): Tag assigned.

2011-03-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* srcdist-doc/INSTALL.in [building]: Qualify liblzma.a requirement;
	add earliest acceptable snapshot release date.

2011-03-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Remove unused 7zip and boost source code from CVS trunk.

	* 7z: Directory and all content removed.
	* boost: Likewise.

2011-03-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Refactor and update existing installation and usage instructions.

	* src/clistub.c (help_text): Updated.

	* srcdist-doc: New directory.
